# ccpm-scheduler

./: .gitignore  .pre-commit-config.yaml  LICENSE-MIT  PLAN.md  README.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  publish.yml
docs/: agent-integration.md  buffer-sizing.md  cli-reference.md  concepts.md  examples.md  faq.md  formats.md  index.md  network-layout.md  python-api.md  references.md
docs/assets/: website-launch-network.html
src/ccpm_scheduler/: __init__.py  __main__.py  build.py  check.py  cli.py  graph.py  io.py  model.py  plot.py  schema.py  validate.py
tests/: test_api.py  test_cli.py  test_golden.py  test_graph.py  test_large_network.py  test_properties.py
tests/golden/equipment-retrofit/: schedule.csv  summary.md
tests/golden/example/: schedule.csv  summary.md
tests/golden/example-hchain/: schedule.csv  summary.md
tests/golden/example-rsem/: schedule.csv  summary.md
tests/golden/kitchen-renovation/: schedule.csv  summary.md
tests/golden/lab-trials/: schedule.csv  summary.md
tests/golden/website-launch/: schedule.csv  summary.md
