[project]
name = "ccpm-scheduler"
version = "0.1.0"
description = "Deterministic Critical Chain Project Management (CCPM) scheduler: validate a project network, build a resource-leveled buffered schedule, verify it, and plot a buffer-aware Gantt chart. Library + CLI, designed for both humans and AI agents."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "R.N. Wolf", email = "rudi@rnwolf.net"},
]
keywords = ["ccpm", "critical-chain", "scheduling", "project-management", "goldratt", "resource-leveling", "gantt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Information Technology",
    "Topic :: Office/Business :: Scheduling",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "matplotlib>=3.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccpm_scheduler"]
