[project]
name = "ccpm-scheduler"
version = "0.10.1"
description = "Deterministic Critical Chain Project Management (CCPM) scheduler: validate a project network, build a resource-leveled buffered schedule, verify it, and plot a buffer-aware Gantt chart. Library + CLI, designed for both humans and AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
authors = [
    {name = "R.N. Wolf", email = "rudi@rnwolf.net"},
]
keywords = ["ccpm", "critical-chain", "scheduling", "project-management", "goldratt", "resource-leveling", "gantt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Information Technology",
    "Topic :: Office/Business :: Scheduling",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "matplotlib>=3.7",
]

[project.urls]
Documentation = "https://rnwolf.github.io/ccpm-scheduler/"
Repository = "https://github.com/rnwolf/ccpm-scheduler"
Changelog = "https://github.com/rnwolf/ccpm-scheduler/releases"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.22",
    "zensical>=0.0.51",
]

[project.scripts]
ccpm-scheduler = "ccpm_scheduler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccpm_scheduler"]

[tool.ruff]
# Target Python 3.10 or newer
target-version = "py310"

# Allow lines to be up to 120 characters long
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # Pycodestyle style errors
    "F",   # Pyflakes logic and error checks
    "I",   # Isort import sorting
    "UP",  # Pyupgrade modern syntax suggestions
    "B",   # Flake8-bugbear logical trap prevention
    "C4",  # Flake8-comprehensions better list/set/dict writing
    "SIM", # Flake8-simplify code cleanups
    "S",   # Flake8-bandit security checks
    "PT",  # Flake8-pytest-style test optimization and consistency
]

[tool.ruff.lint.per-file-ignores]
# Ignore security checks in test files to prevent false alarms
"tests/**/*.py" = ["S"]

[tool.ruff.lint.flake8-pytest-style]
# Enforce a consistent format for pytest parametrize variable names
parametrize-names-type = "csv"

[tool.pytest.ini_options]
addopts = "--cov=ccpm_scheduler --cov-report=term-missing --cov-report=xml"
